--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,10 @@
     <string name="favorites">Favorites</string>
     <string name="settings">Settings</string>
     <string name="alerts">Alerts</string>
+    <string name="pressure">Pressure</string>
+    <string name="humidity">Humidity</string>
+    <string name="wind">Wind</string>
+    <string name="cloud">Cloud</string>
+    <string name="ultraviolet">Ultra violet</string>
+    <string name="visibility">Visibility</string>
 </resources>
