--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -13,4 +13,5 @@
     <string name="ultraviolet">فوق بنفسجي</string>
     <string name="visibility">الرؤية</string>
     <string name="hint_search">ابحث عن المكان </string>
+    <string name="addtofav">"اضافه الي المفضلة "</string>
 </resources>
