--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,7 @@
     <string name="ultraviolet">Ultra violet</string>
     <string name="visibility">Visibility</string>
     <string name="hint_search">search for place </string>
-    <string name="addtofav">Add To Favorite</string>
+    <string name="addtofav">"Add "</string>
+    <string name="radio_Gps">GPS</string>
+    <string name="radio_Map">Map</string>
 </resources>
