--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -3,14 +3,14 @@
     <string name="app_name">" تطبيق الطقس "</string>
     <string name="hello_blank_fragment">فارغ</string>
     <string name="home">الرئيسية</string>
-    <string name="favorites">"المضلة "</string>
+    <string name="favorites">"المفضلة "</string>
     <string name="settings">"الاعدادات "</string>
     <string name="alerts">التنبيهات</string>
     <string name="pressure">الضغط</string>
     <string name="humidity">الرطوبة</string>
     <string name="wind">الرياح</string>
     <string name="cloud">السحاب</string>
-    <string name="ultraviolet">فوق بنفسجي</string>
+    <string name="ultraviolet">الاشعة فوق البنفسجية</string>
     <string name="visibility">الرؤية</string>
     <string name="hint_search">ابحث عن المكان </string>
     <string name="addtofav">اضافة</string>
@@ -27,4 +27,11 @@
     <string name="metric">ميترك (سيليزيس - متر / ثانية )</string>
     <string name="imperial">امبريال ( فهرنهيت - ميل /ثانية )</string>
     <string name="save">حفظ</string>
+    <string name="answer_no">لا , العودة للخلف</string>
+    <string name="answer_yes">"نعم , انا متأكد "</string>
+    <string name="dialog_message">سوف تفقدها من قائمة الاماكن المفضلة لديك</string>
+    <string name="dialog_title">"انتظر ! هل انت متأكد من انك تريد ان تحذف هذا الموقع "</string>
+    <string name="remove_fav">تم الحذف من قائمة المفضلة لديك</string>
+    <string name="choose_location">من فضلك قم بأختيار موقعك</string>
+    <string name="loading">جاري للتحميل ......</string>
 </resources>
