--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
     <string name="remove_fav">Removed from your favorite list</string>
     <string name="choose_location">please choose your location</string>
     <string name="loading">Loading............</string>
+    <string name="no_internet">No internet connection , Try to reconnect</string>
 </resources>
