--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -35,4 +35,5 @@
     <string name="choose_location">من فضلك قم بأختيار موقعك</string>
     <string name="loading">جاري للتحميل ......</string>
     <string name="no_internet">"لا يوجد اتصال بالانترنت , حاول اعادة الاتصال "</string>
+    <string name="no_fav_found">"لم يتم العثور علي مواقع مفضلة "</string>
 </resources>
