--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,5 @@
     <string name="choose_location">please choose your location</string>
     <string name="loading">Loading............</string>
     <string name="no_internet">No internet connection , Try to reconnect</string>
+    <string name="no_fav_found">No favorite locations found</string>
 </resources>
