--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="ultraviolet">Ultra violet</string>
     <string name="visibility">Visibility</string>
     <string name="hint_search">search for place </string>
-    <string name="addtofav">"Add "</string>
+    <string name="addtofav">Add</string>
     <string name="radio_Gps">GPS</string>
     <string name="radio_Map">Map</string>
     <string name="language">Language</string>
@@ -42,4 +42,9 @@
     <string name="alert_dialog_title">Wait ! are you sure you want to delete this alert from your list ?</string>
     <string name="remove_alert">Removed from your alert list</string>
     <string name="no_alert_found">No saved Alerts found</string>
+    <string name="alert_notif_title">Weather Alert</string>
+    <string name="dimiss">Dismiss</string>
+    <string name="alert_dialogg_message">Weather is fine , no alerts for the scheduled time period</string>
+    <string name="notification">Notification</string>
+    <string name="alarm">Alarm</string>
 </resources>
