Alarm  notification working and modify DataBase v7 Flow

--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -47,4 +47,5 @@
     <string name="alert_dialogg_message">الطقس جيد و لا يوجد تنبيهات للوقت المحدد</string>
     <string name="notification">اشعارات</string>
     <string name="alarm">تنبيهات</string>
+    <string name="api_error">عذرا حدث خطأ غير متوقع, من فضلك حاول في وقت لاحق</string>
 </resources>
