--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,5 @@
     <string name="alert_dialogg_message">Weather is fine , no alerts for the scheduled time period</string>
     <string name="notification">Notification</string>
     <string name="alarm">Alarm</string>
+    <string name="api_error">An Expected Error happen,Please try again later</string>
 </resources>
