Fix last dialog bug

--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -49,4 +49,7 @@
     <string name="alarm">تنبيهات</string>
     <string name="api_error">عذرا حدث خطأ غير متوقع, من فضلك حاول في وقت لاحق</string>
     <string name="unknown">مكان غير معروف</string>
+    <string name="fields_empty">يجب عليك ملئ جميع الخانات الخاصه بالوقت و التاريخ</string>
+    <string name="alert_type_empty">يجيب عليك اختيار نوع التنبية</string>
+    <string name="passed_date">من فضلك قم بأختيار تاريخ صحيح يبدأ من اليوم</string>
 </resources>
